# Committed

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MASTER.md  Master.md  README.md  ROADMAP.md  START_HERE.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
analysis/: build_strata.py  collect_rows.py  count_filtered.py  diff_token_dist.py  explore_data.py  human_ratings_50.jsonl  human_worksheet_50.md  inspect_messages.py  line_analysis.py  pool_stats.py  profile_test_split.py  spotcheck_filter.py  token_dist.py
analysis/results/: baseline_0.6b_deepseek_judge_log.jsonl  baseline_0.6b_judge_log.jsonl  baseline_0.6b_strata442.jsonl  baseline_0p6b_deepseek_report.json  baseline_0p6b_deepseek_report.md  baseline_1.7b_deepseek_judge_log.jsonl  baseline_1p7b_deepseek_report.json  baseline_1p7b_deepseek_report.md  baseline_judge_log.jsonl  baseline_report.json  baseline_report.md  baseline_strata442.jsonl  finetune_0.6b_deepseek_judge_log.jsonl  finetune_0.6b_judge_log.jsonl  finetune_0.6b_strata442.jsonl  finetune_0p6b_deepseek_report.json  finetune_0p6b_deepseek_report.md  finetune_0p6b_report.json  finetune_0p6b_report.md  finetune_1.7b_deepseek_judge_log.jsonl  finetune_1p7b_deepseek_report.json  finetune_1p7b_deepseek_report.md  finetune_judge_log.jsonl  finetune_report.json  finetune_report.md  finetune_strata442.jsonl  scan_full.txt  spotcheck.txt  token_dist.txt
app/: README_SPACE.md  app.py  gradio_app.py  requirements.txt
configs/: qwen3-0.6b-lora-r16.yaml  qwen3-1.7b-lora-r16.yaml
data/: strata_manifest.json
docs/: DECISION_LOG.md  STATUS.md  decision-tree.md
docs/audit/: REPO_AUDIT.md
docs/decisions/: 0001-adopt-adr-logging.md  0002-reframe-positioning.md  0003-base-model-qwen3-1p7b.md  0004-serving-layer-into-v1.md  0005-serve-llamacpp-gguf-cpu.md  0006-dependency-split-cpu-gpu.md  0007-codespaces-devcontainer.md  0008-judge-claude-haiku-4-5.md  0009-gbnf-constrained-decoding.md  0010-uv-sync-in-devcontainer.md  0011-judge-gemini-flash-free-tier.md  0012-redistribute-filtered-dataset-under-source-license.md  0013-adopt-status-tracking-workflow.md  0014-abandon-project-github-sync.md  0015-adopt-claude-code-decision-log-agent.md  0016-id-echo-confirmation-for-decision-log.md  0017-relax-cc-regex-normalization-spec.md  0018-revise-dataset-size-target.md  0019-adopt-hpc-cluster-primary-training.md  0020-message-length-subject-only-ceiling.md  0021-detect-bots-by-message-pattern.md  0022-file-language-by-extension.md  0023-expand-scope-all-languages.md  0024-installable-package-src-layout.md  0025-dataset-build-cap-floor-stratification.md  0026-stratification-type-only.md  0027-analytic-per-axis-llm-rubric.md  0028-judge-axis-set-four-orthogonal.md  0029-per-axis-scoring-scales.md  0030-judge-reasoning-protocol.md  0039-cc-gbnf-grammar.md  (+20 more)
handoffs/: ADR_demo_surface_brief.md  DECISIONLOG_AGENT.md  JOB_B_PHASE3_AGENT.md  JOB_B_v2i1_AGENT.md  SERVING_AGENT.md  SETUP_AGENT.md
scripts/: build_decision_log.py  make_judge_check.py  merge_adapter.py  merge_convert_quantize.py  show_judgments.py  train.slurm
tests/: smoke_test.py  test_build.py  test_filter.py  test_serving.py
(+25 files in other folders)
