[project]
name = "committed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "fastapi>=0.136.3",
    "gradio>=6.15.2",
    "llama-cpp-python>=0.3.23",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
    "wandb>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
train = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "peft>=0.19.1",
    "trl>=1.5.1",
    "unsloth>=2024.8",
]
