[project]
name = "committed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
# Required = the serving/demo path only (engine.py, serving/api.py, app.py).
# This is what `pip install committed @ git+...` pulls on the Space, so it stays
# small and the Space build is fast. Eval- and train-only deps live in the
# optional groups below and are never installed by a plain package install.
dependencies = [
    "fastapi>=0.136.3",
    "gradio>=6.15.2",
    # huggingface-hub: arrives transitively via transformers, but engine.py and
    # cli.py import hf_hub_download / try_to_load_from_cache directly, so pin it
    # explicitly rather than leaning on a transitive dep.
    "huggingface-hub>=0.28.0",
    "llama-cpp-python==0.3.30",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]

[project.scripts]
# Console entry point: `committed` becomes a real command after install, mapping
# to cli.main(). This is the headline local path — `git diff | committed`.
committed = "committed.cli:main"
#
[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "pyyaml>=6.0.3",
]
# Eval harness only (judge + metrics). Install with: uv sync --group eval
eval = [
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "google-genai>=2.7.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "wandb>=0.27.0",
]
# GPU training stack. Install with: uv sync --group train
# pyyaml: train.py reads the YAML config. wandb: run tracking during training.
train = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "peft>=0.19.1",
    "trl>=1.5.1",
    "torch>=2.4",
    "pyyaml>=6.0.3",
    "wandb>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/committed"]

[tool.ruff]
extend-exclude = ["analysis", "notebooks"]

# Pin torch to the CUDA 12.1 wheel index. The Explorer V100 has a CUDA 12.3
# driver; the default PyPI torch wheel targets a newer CUDA and falls back to
# CPU / fails. cu121 is backward-compatible with a 12.3 driver.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }